	set as a texmf tree ('root directory' in MiKTeX parlance).

    o	S3 generic functions now use correct S4 inheritance when
        dispatching on an S4 object.  See ?Methods, section on
        "Methods for S3 Generic Functions" for recommendations and details.

    o	format.pval() gains a ... argument to pass arguments such as
	'nsmall' to format().  (Wish of PR#9574)


DEPRECATED & DEFUNCT

    o	Supplying the parser with a string containing both octal/hex and
	Unicode escapes is now an error.

    o	File extension .C for C++ code files in packages is now defunct.


PACKAGE INSTALLATION

    o	install.packages() has a new argument 'libs_only' to optionally
	pass --libs-only to INSTALL and works analogously for Windows
	binary installs (to add support for 64- or 32-bit Windows).

    o	When sub-architectures are in use, the installed architectures
	are recorded in the 'Archs' field of the DESCRIPTION file.
	There is a new default filter, "subarch", in
	available.packages() to make use of this.

	Code is compiled in a copy of the 'src' directory when a
	package is installed for more than one sub-architecture: this
	avoid problems with cleaning the sources between building
	sub-architectures.

    o	R CMD INSTALL --libs-only no longer overrides the setting of
	locking, so a previous version of the package will be restored
	unless --no-lock is specified.


UTILITIES

    o	R CMD Rprof|build|check are now based on R rather than Perl
	scripts.  The only remaining Perl scripts are the rarely used
	R CMD Sd2Rd, install-info.pl (used only if install-info is
	not found) and some maintainer-mode-only scripts.

    o	R CMD check has a new argument --extra-arch to confine tests
	to those needed to check an additional sub-architecture.

	R CMD check's check for "Subdirectory 'inst' contains no files"
	is more thorough: it looks for files, and warns if there are
	only empty directories.

	'check' configuration files have changed format: they are now